tests/snapshot/error/source_locations/expression/yield_star/throw_result_get_named_property_done_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      throw() {
        return {
          get done() {
            throw new Error();
          },
          value: 1,
        }
      }
    };
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();
iter.throw();