tests/snapshot/error/source_locations/expression/yield_star/throw_result_get_named_property_done_throws.exp
Error: 
   ┌ source_locations/expression/yield_star/throw_result_get_named_property_done_throws.js:10:19
   |
10 |             throw new Error();
   |                   ^
Stack trace:
  at get done (source_locations/expression/yield_star/throw_result_get_named_property_done_throws.js:10:19)
  at generator (source_locations/expression/yield_star/throw_result_get_named_property_done_throws.js:20:3)
  at throw (<native>)
  at <global> (source_locations/expression/yield_star/throw_result_get_named_property_done_throws.js:25:1)